--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -71,7 +71,7 @@
 </li>
 </ul>
 <p>The first project investigates the relationship between level of education and insurance. I wanted to see if having more education would indicate having a greater chance of being insured in life.</p>
-<p>The second project is all about sports- specifically Stephen Curry in teh NBA. I looked into the 2016-2017 season and wanted to see if there was any correlation to with, let&rsquo;s say, winning the game and the amount of points he scored per game.</p>
+<p>The second project is all about sports- specifically Stephen Curry in the NBA. I looked into the 2016-2017 season and wanted to see if there was any correlation to with, let&rsquo;s say, winning the game and the amount of points he scored per game.</p>
 
       </div>
     </div>
